--- a/views/hour-readings/clients-hour-readings.ejs
+++ b/views/hour-readings/clients-hour-readings.ejs
@@ -10,11 +10,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link href='../../../AdminLTE-master/plugins/fullcalendar/main.css' rel='stylesheet' />
@@ -29,21 +30,38 @@
 </head>
 
 <body>
-    <h1 class="text-center mb-5">Мерения по часове за клиент: </h1>
-    <div class="row">
-        <div id="calendar" class="col-md-10">
+
+    <ul class="nav nav-tabs">
+        <li class="active mr-5"><a data-toggle="tab" href="#hour-readings">Мерения по часове</a></li>
+        <li><a data-toggle="tab" href="#imbalance">Небаланси</a></li>
+    </ul>
+
+    <div class="tab-content">
+        <div id="hour-readings" class="tab-pane fade in active">
+            <h1 class="text-center mb-5">Мерения по часове за клиент: </h1>
+            <div class="row">
+                <div id="calendar-hourly" class="col-md-10">
+                </div>
+
+                <div id="legend" class="col-md-2">
+                    <h2 class="text-center mb-3"><i class="fas fa-tags"></i>Легенда</h2>
+                    <ul>
+                        <li class="text-primary mb-3">Синъо: Настоящи мерения</li>
+                        <li class="text-danger">Червено: Нови мерения</li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
-        <div id="legend" class="col-md-2">
-            <h2 class="text-center mb-3"><i class="fas fa-tags"></i>Легенда</h2>
-            <ul>
-                <li class="text-primary mb-3">Синъо: Настоящи мерения</li>
-                <li class="text-danger">Червено: Нови мерения</li>
-            </ul>
+        <div id="imbalance" class="tab-pane fade">
+            <h1 class="text-center mb-5">Небаланси</h1>
+            <div class="row">
+                <div id="calendar-imbalance" class="col-md-12">
+                </div>
+            </div>
         </div>
-    </div>
-    <script src="../../../../js/hour-readings/clients-hour-readings.js">
-    </script>
+        <script src="../../../../js/hour-readings/clients-hour-readings.js">
+        </script>
 </body>
 
 </html>
