--- a/views/STP listings/listClients-STP.ejs
+++ b/views/STP listings/listClients-STP.ejs
@@ -20,6 +20,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../js/datatables/datatables.min.css">
+    <link rel="stylesheet" href="../../../../css/listSTPClients.css">
     <script src="../../../js/datatables/datatables.js"></script>
     <title>Document</title>
 </head>
@@ -27,6 +28,21 @@
 <body>
     <h1 class="text-center mb-5">Клиенти - по СТП</h1>
     <div class="container clients text-center mb-5">
+        <div class="row justify-content-end">
+            <span class="mr-2">Вид ЕРП:</span>
+            <label class="radio">
+                <input type="radio" name="ERP" value="EVN">
+                <span>ИВН</span>
+            </label>
+            <label class="radio">
+                <input type="radio" name="ERP" value="CEZ">
+                <span>ЧЕЗ</span>
+            </label>
+            <label class="radio">
+                <input type="radio" name="ERP" value="EnergoPRO">
+                <span>EnergoPRO</span>
+            </label>
+        </div>
         <table id="clients" class="display">
             <thead>
                 <tr>
@@ -41,5 +57,4 @@
     </div>
     <script src="../../../../js/STP listing/listClients-STP.js"></script>
 </body>
-
 </html>
