--- a/views/clients/clients-info.ejs
+++ b/views/clients/clients-info.ejs
@@ -27,6 +27,8 @@
     <script src="../../../AdminLTE-master/plugins/fullcalendar-timegrid/main.js"></script>
     <link rel="stylesheet" href="../../../AdminLTE-master/css/custom-calendar.css">
     <link rel="stylesheet" href="../../../../css/clients-info.css">
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <title>Document</title>
 </head>
 
@@ -41,6 +43,7 @@
 
     <div class="tab-content">
 
+        <!-- Info -->
         <div id="info" class="tab-pane fade">
             <div class="container">
                 <h1 class="text-center mb-5">Детайли на клиент</h1>
@@ -75,8 +78,17 @@
             </div>
         </div>
 
+
+        <!-- Hour-Readings -->
         <div id="hour-readings" class="tab-pane fade">
             <h1 class="text-center mb-5">Мерения по часове за клиент: </h1>
+
+            <label class="switch">
+                <input class="switch-input" type="checkbox" checked />
+                <span class="switch-label" data-on="Календар" data-off="Графики"></span>
+                <span class="switch-handle"></span>
+            </label>
+
             <div class="row">
                 <div id="calendar-hourly" class="col-md-10">
                 </div>
@@ -88,25 +100,37 @@
                         <li class="text-danger">Червено: Нови мерения</li>
                     </ul>
                 </div>
+            </div>
 
+            <div class="invisible hour-readings-graph-div">
+                <form action="submit">
+                    <div class="row my-5">
+                        <div class="offset-1 col-md-3">
+                            <input type="date" name="fromDate" />От дата
+                        </div>
+                        <div class="col-md-3">
+                            <input type="date" name="toDate" />До дата
+                        </div>
 
+                        <div class="col-md-2">
+                            <button type="submit" id="searchBtnHourlyGraph" class="btn-lg btn-primary">Търси</button>
+                        </div>
+
+                        <div class="col-md-2">
+                            <label class="switch">
+                                <input class="switch-input" type="checkbox" checked />
+                                <span class="switch-label" data-on="Линия" data-off="Бар"></span>
+                                <span class="switch-handle"></span>
+                            </label>
+                        </div>
+                    </div>
+                </form>
                 <canvas id="hour-readings-chart" class="mb-5" width="400" height="400"></canvas>
-            </div>
-            
-
-            <div class="card card-secondary">
-            </div>
-            <div class="bootstrap-switch-null bootstrap-switch-undefined bootstrap-switch-undefined bootstrap-switch-undefined bootstrap-switch-undefined bootstrap-switch-undefined bootstrap-switch bootstrap-switch-wrapper bootstrap-switch-focused bootstrap-switch-animate"
-                style="width: 88px;">
-                <div class="bootstrap-switch-container" style="width: 129px; margin-left: 0px;"><span
-                        class="bootstrap-switch-handle-on bootstrap-switch-success" style="width: 43px;">ON</span><span
-                        class="bootstrap-switch-label" style="width: 43px;">&nbsp;</span><span
-                        class="bootstrap-switch-handle-off bootstrap-switch-danger" style="width: 43px;"></span><input
-                        type="checkbox" name="my-checkbox" checked="" data-bootstrap-switch="" data-off-color="danger"
-                        data-on-color="success"></div>
             </div>
         </div>
 
+
+        <!-- Graphs -->
         <div id="graph" class="tab-pane fade">
             <h1 class="text-center mb-5">График</h1>
             <div class="row">
@@ -115,6 +139,8 @@
             </div>
         </div>
 
+
+        <!-- Imbalances -->
         <div id="imbalance" class="tab-pane fade">
             <h1 class="text-center mb-5">Небаланси</h1>
             <div class="row">
@@ -123,8 +149,9 @@
                 <canvas id="myChart" width="400" height="400"></canvas>
             </div>
         </div>
-        <script src="../../../../js/clients/clients-info.js">
-        </script>
+    </div>
+    <script src="../../../../js/clients/clients-info.js">
+    </script>
 </body>
 
 </html>
